--- a/DESAFIOS/desafio11/index.html
+++ b/DESAFIOS/desafio11/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="#">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
 
     <main>
@@ -102,7 +102,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="#">Guilherme Moreira</a> para o <a href="#">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/GuilhermeMoreiira" target="_blank">Guilherme Moreira</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
     </footer>
     
 </body>
